fixed cards, text alignment

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p, h3, h4, li {
     font-style: normal;
 }
 
-h3 i {
+h3 {
     text-align: center;
 }
 
@@ -53,6 +53,8 @@ nav a.active {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 40%;
+    display: inline;
+    text-decoration: none;
 }
 
 .card:hover {
@@ -60,5 +62,5 @@ nav a.active {
 }
 
 .container {
-    padding: 2px 16px;
+    padding: 2% 5%;
 }
